fix(BitmapTaskDispatcher/PreViewImageView):将线程池中存放任务的列表换为ArrayList，修复预览时拖动抖动问题